May 2013 Neel
* Multiple bug fixes contributed by Michael Tuexen
Aug 24 neel
* Multiple bug fixes contributed by Michael Tuexen
Jun 3 2011 neel
* MacOS fixes contributed by Michael Tuexen
May 9 2011 neel
* FreeBSD fixes contributed by Michael Tuexen
Sep 18 2009 hiamitabha
* Support for RDS added. To test RDS, you either need latest OpenSolaris or 
  any standard Linux flavor with the OFED stack.
Jul 10 2009 neel
* make check now works
Jun 30 2009 neel
* Now works on Solaris 9 (configure with --disable-sctp --disable-ssl 
  --disable-cpc)
* Strand cleanup is done by strand itself. On exits with error, we do
  no cleanup.
Jan 6 2009 neel
* Fix 2450904: uperf hang for some profiles with zero TCP window size
Jul 18 2008 neel
* uperf now works on FreeBSD!! Many thanks to Andrew Gallatin
Jun 24 2008 neel
* Add -x option for fenxi styled output (see http://fenxi.dev.java.net)
Jun 4 2008
* Add UDP Tx throttling
Feb 26 2008
* Use flowop->options.flag for various binary flags(tcp_nodelay, canfail)
Feb 19 2008
* Add support for send and recv flowops
Feb 12 2008
* FLOWOP_WAIT is now deprecated (it never did anything for non-udapl protocols)

Feb 8 2008
* Add support for asymmetric operations (rsize feature)

Jan 2008 neel
* SSL is now mt-safe
* Removed support for duration in flowop (decrease code complexity)
* Flowops do not support rate (Transactions do)

Aug 20 2007 neel
* Implement named connections (Each connection could be anonymous or have
  a "id" associated with it.)
Jun 27 2007 neel
* Disable socket buffer warning if requested/set off by 10%
* Fix bug where non_blocking was not being set if wndsz was not set
* Clean up configure.in and add check for stdint.h (not there on s9)

Jun 12 2007 Eric
* Bump up version to 0.2.6
* Disable version check during handshaking
* Fix bug "uPerf cannot terminate when time is up"

Jan 17 2007 Neel
* Added support for rate keyword in transactions. This is a per thread
  value. For ex
  <transaction duration="200s" rate="1000">